ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  spec:
  tls:
    - secretName: test-tls
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loadvoteapp
            port:
              number: 80
